langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__attrb_with_explicit_object_no_product_id.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req({ id: \"ID1\"})]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("b06eee261c890ca946b33b7f304fc5c3f5cf2603c8caa4f8ab97eb695e8563f3"),
    ),
  ],
  coverage_excludes: [],
)
