langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__attrb_with_explicit_product_id_followed_by_literal_id.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req({ id: \"ID1\", product_id: \"product-id\"}, \"ID2\")]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: Some("product-id"),
        ),
        RequirementPk(
          id: "ID2",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("f01c03c38ce5783189a060b29087299f2bca67f91a2c4174f9b8771bf6d509ab"),
    ),
  ],
  coverage_excludes: [],
)
