langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__attrb_with_explicit_product_id_quoted_idents.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req({ \"id\": \"ID1\", \"product_id\": \"product-id\"})]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: Some("product-id"),
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("d50473d2727aeecd08dd93bdb0871ed436f84c1e1b096381cc2dc088f90bc7ef"),
    ),
  ],
  coverage_excludes: [],
)
