langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__attrb_with_literal_id_followed_by_explicit_product_id.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req(\"ID1\", { id: \"ID2\", product_id: \"product-b\"})]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
        RequirementPk(
          id: "ID2",
          product_id: Some("product-b"),
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("a77ab7dc64011876fefc5f34233e4b5a0113402c8e333acf3355701b31b06246"),
    ),
  ],
  coverage_excludes: [],
)
